--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,8 @@ body {
     )
     rgb(var(--background-start-rgb)); */
     -ms-ovrerflow-style:none;
+    margin: 0;
+    padding: 0;
 }
 
 @layer utilities {
